<resources>
    <string name="app_name" translatable="false">MajesticView</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="txtLogin">Login</string>
    <string name="login_in">Login in</string>
    <string name="input_usuario">Mail</string>
    <string name="btSing_in">Sing in</string>
    <string name="txtPassword">Password</string>
    <string name="txtMail">Mail</string>
    <string name="txtWelcome">Welcome</string>
    <string name="btNext">Next</string>
    <string name="idpersonalInformation">Personal Information\n</string>
    <string name="idtelephone">Thelephone number</string>
    <string name="iddateBirth">Date of birth</string>
    <string name="idemail">Email</string>
    <string name="idMale">Male\n</string>
    <string name="idFamale">Famale</string>
    <string name="idUndefined">Undefined</string>
    <string name="idTerms">Accept terms and conditions</string>
    <string name="idCreat">Crate a MajeticView account</string>
    <string name="idEnter">Enter your name</string>
    <string name="idName">Name</string>
    <string name="idLastname">Last name\n</string>
    <string name="idRegistter">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>