<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_envelope"
    tools:context=".fragment_register">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="356dp"
        android:layout_height="167dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/bungee_shade"
        android:text="Majestic View"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/idCreat"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="32dp"
        android:text="@string/idCreat"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idEnter"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="121dp"
        android:text="@string/idEnter"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/idName"
        android:layout_width="351dp"
        android:layout_height="74dp"
        android:layout_below="@+id/idEnter"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginStart="2dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="4dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:ems="10"
        android:hint="@string/idName"
        android:inputType="text"
        android:textColorHint="@color/material_dynamic_primary10" />

    <EditText
        android:id="@+id/idLastname"
        android:layout_width="351dp"
        android:layout_height="73dp"
        android:layout_below="@+id/idName"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="2dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:ems="10"
        android:hint="@string/idLastname"
        android:inputType="text"
        android:textColorHint="@color/material_dynamic_primary10" />

    <Button
        android:id="@+id/button"
        android:layout_width="139dp"
        android:layout_height="67dp"
        android:layout_below="@+id/idLastname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="143dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="@string/btNext"
        android:textColor="@color/white"
        tools:targetApi="s" />
</RelativeLayout>