<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_envelope"
    tools:context=".fragment_menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="407dp"
        android:layout_height="113dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="85dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/bungee_shade"
        android:text="To"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="423dp"
        android:layout_height="111dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idReservation"
        android:layout_width="147dp"
        android:layout_height="77dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="Reservation"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity5"
        tools:targetApi="s" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_marginTop="308dp"
        android:ems="10"
        android:hint="@string/idName"
        android:inputType="text"
        android:textColor="@color/material_dynamic_primary10"
        android:textColorHint="@color/material_dynamic_primary10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/idemail"
        android:inputType="text"
        android:textColor="@color/material_dynamic_primary10"
        android:textColorHint="@color/material_dynamic_primary10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="378dp"
        android:layout_height="77dp"
        android:layout_marginTop="20dp"
        android:entries="@array/metodo_pago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFin" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="378dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:entries="@array/Tipos_habitaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/idInicio"
        android:layout_width="159dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="dd/mm/yy"
        android:textColorHint="@color/material_dynamic_primary10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/idFin"
        android:layout_width="159dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="dd/mm/yy"
        android:inputType="date"
        android:textColorHint="@color/material_dynamic_primary10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idInicio"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/idStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="Start Date"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="MissingConstraints"
        tools:targetApi="s" />

    <Button
        android:id="@+id/idEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@android:color/system_accent1_800"
        android:text="End date"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idStart"
        tools:ignore="MissingConstraints"
        tools:targetApi="s" />

</androidx.constraintlayout.widget.ConstraintLayout>